--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "NaspersClassifieds/tradus-bundle",
+    "name": "altaf/tradus-bundle",
     "description": "TradusBundle with models, services, factories, wrappers to be shared",
     "authors": [
         {
-            "name": "Bernardo Alves",
-            "email": "bernardo.alves@olx.com"
+            "name": "Altaf S",
+            "email": "altaf_samnani@hotmail.com"
         }
     ],
     "autoload": {
